# lorealis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_switch.sh  convert_pinyin_dict.py  libssh2.pc.in
config/ssh/: connections.json
include/: lua_manager.hpp  ns_log.hpp  xml_loader.hpp  zip_loader.hpp
include/compat/: strings.h  unistd.h
include/html/: format_converters.hpp
include/network/: http_client.hpp
include/ssh/: ssh_client.hpp
include/utils/: image_utils.hpp
include/view/: html_parser.hpp  html_renderer.hpp  html_style.hpp  html_view_builder.hpp  markdown_renderer.hpp
mod/rss/: module.ini
mod/ssh/: module.ini
mod/ssh/lua/: ansi_parser.lua  connection_view.lua  custom_text_input.lua  debug_log.lua  keyboard.lua  main.lua  overlay_keyboard_input.lua  pinyin_ime.lua  pinyin_lexicon_extra.lua  pinyin_lexicon_user.lua  platform.lua  saved_connections.lua  ssh_client_view.lua  ssh_host_parser.lua  ssh_manager.lua  ssh_terminal_session.lua  terminal_buffer.lua  terminal_view.lua  terminal_view_core.lua
mod/ssh/xml/: connect.xml  terminal.xml
pkgs/: hello.blpkg
pkgs/hello/: main.lua  main.xml
res/: email_render_test.html
res/lua/: html_test.lua  main.lua
res/lua/activity/: main_activity.lua
res/lua/tab/: cnbeta_list_tab.lua  components_tab.lua  game_list_tab.lua  hello_tab.lua  layout_theme_settings_tab.lua  recycling_list_tab.lua  rss_list_tab.lua  settings_tab.lua  ssh_client_tab.lua  text_test_tab.lua  transform_tab.lua
res/lua/utils/: dkjson.lua  image_cache.lua  json.lua  network.lua  rss_storage.lua  zip_view_loader.lua
res/lua/view/: cnbeta_detail_view.lua  game_detail_view.lua  hello_view.lua  pokemon_view.lua  rss_detail_view.lua
res/xml/: lua-main.xml
res/xml/activity/: main.xml
res/xml/cells/: game_cell.xml  message_cell.xml  rss_cell.xml
res/xml/tabs/: game_list.xml  hello.xml  layout_theme_settings.xml  rss_list.xml  settings.xml  ssh_client.xml
res/xml/views/: cnbeta_detail.xml  game_detail.xml  hello.xml  ssh_host_row.xml  ssh_terminal_screen.xml
scripts/: repack_switch_romfs.ps1  repack_switch_romfs.sh
src/: lua_manager.cpp  main.cpp  xml_loader.cpp  zip_loader.cpp
src/html/: format_converters.cpp  html_parser.cpp  html_renderer.cpp  html_style.cpp  html_view_builder.cpp  markdown_renderer.cpp
src/lua/: lua_animation.cpp  lua_bindings.hpp  lua_cells.cpp  lua_core.cpp  lua_html.cpp  lua_network.cpp  lua_recycler.cpp  lua_ssh.cpp  lua_view.cpp
src/network/: http_client.cpp
src/utils/: image_utils.cpp
